реализована пагинация, но с ошибками